--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.1",
+    "@prisma/client": "^4.3.1",
     "axios": "^0.27.2",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "zustand": "^4.0.0"
@@ -22,6 +24,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.5",
+    "prisma": "^4.3.1",
     "typescript": "4.7.4"
   }
 }
