--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^1.9.1",
     "@prisma/client": "^4.3.1",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
@@ -19,6 +20,7 @@
     "zustand": "^4.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.7.3",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
