--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "2.1.12",
     "zustand": "^4.0.0"
   },
   "devDependencies": {
